--- a/index.ipynb
+++ b/index.ipynb
@@ -1260,7 +1260,7 @@
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return = (first_show['attendance']-first_show['attendance)/(first_show['budget'] - ')"
+    "    return = (first_show['attendance']-first_show['attendance)/(first_show['budget'] - second_show )"
    ]
   },
   {
