--- a/index.ipynb
+++ b/index.ipynb
@@ -1246,21 +1246,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-45-69ffb8ecde7a>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-9-edc4a4e19b55>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-69ffb8ecde7a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return = (first_show['attendance']-first_show['attendance)/('budget'[first_show] - 'budget'[second_show])\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-edc4a4e19b55>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return = (first_show['attendance']-first_show['attendance])/(first_show['budget'] - second_show['budget'])\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return = (first_show['attendance']-first_show['attendance)/(first_show['budget'] - second_show['budget'])"
+    "    return = (first_show['attendance']-first_show['attendance])/(first_show['budget'] - second_show['budget'])"
    ]
   },
   {
