--- a/index.ipynb
+++ b/index.ipynb
@@ -1246,28 +1246,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-06a864b85aff>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-06a864b85aff>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return (second_show['attendance']-first_show['attendance])/(second_show['budget']-first_show['budget'])\u001b[0m\n\u001b[0m                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return (second_show['attendance']-first_show['attendance])/(second_show['budget']-first_show['budget'])"
+    "    return (second_show['attendance']-first_show['attendance'])/(second_show['budget']-first_show['budget'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marginal_return_on_budget(first_show, second_show) # 1.5"
    ]
