--- a/index.ipynb
+++ b/index.ipynb
@@ -1417,7 +1417,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    x_values[0]"
+    "    x_values[]"
    ]
   },
   {
