--- a/index.ipynb
+++ b/index.ipynb
@@ -1417,7 +1417,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "   return (y) (x_values[-1]-x_values[0])"
+    "   return (y_values[-1]-) (x_values[-1]-x_values[0])"
    ]
   },
   {
