--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1454,8 +1454,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    slope = (y_values[-1]-y_values[0])/(x_values[-1]-x_values[0])\n",
-    "    "
+    "    (y_values[-1]-y_values[0])/(x_values[-1]-x_values[0])"
    ]
   },
   {
