--- a/index.ipynb
+++ b/index.ipynb
@@ -1455,7 +1455,8 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    slope = (y_values[-1]-y_values[0])/(x_values[-1]-x_values[0])\n",
-    "    y_intercept = x_values[0]*slope - y_values[]"
+    "    y_intercept = x_values[0]*slope - y_values[0]\n",
+    "    "
    ]
   },
   {
