--- a/index.ipynb
+++ b/index.ipynb
@@ -1456,7 +1456,7 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    slope = (y_values[-1]-y_values[0])/(x_values[-1]-x_values[0])\n",
     "    y_intercept = x_values[0]*slope - y_values[0]\n",
-    "    "
+    "    return y_inte"
    ]
   },
   {
