Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1455,7 +1455,7 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    slope = (y_values[-1]-y_values[0])/(x_values[-1]-x_values[0])\n",
-    "    y_intercept = y_v x_values[0]*slope \n",
+    "    y_intercept = y_values[0]-x_values[0]*slope \n",
     "    return y_intercept"
    ]
   },
