--- a/index.ipynb
+++ b/index.ipynb
@@ -1515,7 +1515,7 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    starting_line = {'m':slope(x_values, y_values), 'b':}"
+    "    starting_line = {'m':slope(x_values, y_values), 'b': y_intercept}"
    ]
   },
   {
