--- a/index.ipynb
+++ b/index.ipynb
@@ -1565,7 +1565,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    expected_value = \n",
+    "    expected_value = m\n",
     "    pass"
    ]
   },
