--- a/index.ipynb
+++ b/index.ipynb
@@ -1560,14 +1560,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    rm*x_value + b \n",
-    "    \n",
-    "    pass"
+    "    return m*x_value + b \n"
    ]
   },
   {
